--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "vue": "^2.6.10",
     "vue-loader": "^14.2.4",
     "vue-template-compiler": "^2.6.10",
+    "vue-virtual-scroller": "^1.0.0-rc.2",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.1",
