--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "i18next-conv": "^3.0.3",
     "i18next-xhr-backend": "^1.4.1",
     "ip-regex": "2.1.0",
-    "irc-framework": "^4.3.0",
+    "irc-framework": "4.4.0",
     "json-loader": "^0.5.4",
     "json5": "^2.1.0",
     "less": "^2.7.1",
