Revert the config.json.

--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,6 @@
 {
     "windowTitle": "Kiwi IRC - The web IRC client",
-    "startupScreen": "customServer",
+    "startupScreen": "welcome",
     "kiwiServer": "https://localdev.clients.kiwiirc.com/webirc/kiwiirc/",
     "restricted": false,
     "theme": "Default",
@@ -16,12 +16,8 @@
         { "name": "Elite", "url": "static/themes/elite" }
     ],
     "startupOptions" : {
-        "channel": "#kiwiirc-test2",
-        "nick": "kiwi-n?",
-        "server":"irc.irc.com",
-        "port":6667,
-        "tls":false,
-        "direct":false
+        "channel": "#kiwiirc-default",
+        "nick": "kiwi-n?"
     },
     "embedly": {
         "key": ""
